force-app/main/default/objects/favourate__c/favourate__c.object-meta.xml
<CustomObject>
    <label>favorite</label>
    <nameField>
        <label>favourate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>favorites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>