force-app/main/default/objects/favourate__c/fields/favorite__c.field-meta.xml
<CustomField>
    <fullName>favorite__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>favorite name</label>
    <type>AutoNumber</type>
</CustomField>